tests/snapshots/snapshot_tests__array_append2_array_horn.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_append2_array_horn.vmt",
    status: Panic,
    used_instantiations: [],
}
