tests/snapshots/snapshot_tests__array_append2_array_horn.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_append2_array_horn.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int A K W) K) W)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!0 N W) N) W)",
        "(= (Read-Int-Int (Write-Int-Int A K W) K) (Read-Int-Int A K))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!0 N W) N) (Read-Int-Int Array-Int-Int!val!0 N))",
    ],
}
