tests/snapshots/snapshot_tests__array_bubble_sort.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_bubble_sort.vmt",
    status: Good,
    used_instantiations: [],
}
