tests/snapshots/snapshot_tests__array_copy.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_copy.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int b_next i_next (Read-Int-Int a i_next)) i_next) (Read-Int-Int a i_next))",
        "(= (Read-Int-Int (Write-Int-Int b_next Z (Read-Int-Int a Z)) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int b_next Z (Read-Int-Int a Z)) Z) (Read-Int-Int b_next Z))",
    ],
}
