tests/snapshots/snapshot_tests__array_copy_increment.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_copy_increment.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int b i 1237) i) 1237)",
        "(= (Read-Int-Int (Write-Int-Int b i 1236) i) 1236)",
        "(= (Read-Int-Int (Write-Int-Int b i (- 1201)) i) (- 1201))",
        "(= (Read-Int-Int (Write-Int-Int b i (- 1202)) i) (- 1202))",
        "(= (Read-Int-Int (Write-Int-Int b i (- 2234)) i) (- 2234))",
        "(= (Read-Int-Int (Write-Int-Int b i (- 2233)) i) (- 2233))",
        "(= (Read-Int-Int (Write-Int-Int b i (- 1788)) i) (- 1788))",
        "(= (Read-Int-Int (Write-Int-Int b i (- 1787)) i) (- 1787))",
        "(= (Read-Int-Int (Write-Int-Int b i (- 1626)) i) (- 1626))",
        "(= (Read-Int-Int (Write-Int-Int b i (- 1625)) i) (- 1625))",
        "(= (Read-Int-Int (Write-Int-Int b Z 1237) Z) 1237)",
        "(= (Read-Int-Int (Write-Int-Int b i 2438) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z 1797) Z) 1797)",
        "(= (Read-Int-Int (Write-Int-Int b Z 8856) Z) 8856)",
        "(= (Read-Int-Int (Write-Int-Int b Z 2438) Z) 2438)",
        "(= (Read-Int-Int (Write-Int-Int b Z 8855) Z) 8855)",
        "(= (Read-Int-Int (Write-Int-Int b Z 7059) Z) 7059)",
        "(= (Read-Int-Int (Write-Int-Int b Z 7058) Z) 7058)",
        "(= (Read-Int-Int (Write-Int-Int b Z 6569) Z) 6569)",
        "(= (Read-Int-Int (Write-Int-Int b i 1237) i) (Read-Int-Int b i))",
    ],
}
