tests/snapshots/snapshot_tests__array_copy_increment_ind.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_copy_increment_ind.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int b i 7720) i) 7720)",
        "(= (Read-Int-Int (Write-Int-Int b i 7719) i) 7719)",
        "(= (Read-Int-Int (Write-Int-Int b i 6483) i) 6483)",
        "(= (Read-Int-Int (Write-Int-Int b i 6484) i) 6484)",
        "(= (Read-Int-Int (Write-Int-Int b i 7685) i) 7685)",
        "(= (Read-Int-Int (Write-Int-Int b i 7684) i) 7684)",
        "(= (Read-Int-Int (Write-Int-Int b i 6932) i) 6932)",
        "(= (Read-Int-Int (Write-Int-Int b i 6931) i) 6931)",
        "(= (Read-Int-Int (Write-Int-Int b i 6633) i) 6633)",
        "(= (Read-Int-Int (Write-Int-Int b i 6632) i) 6632)",
        "(= (Read-Int-Int (Write-Int-Int b Z 8856) Z) 8856)",
        "(= (Read-Int-Int (Write-Int-Int b Z 7719) Z) 7719)",
        "(= (Read-Int-Int (Write-Int-Int b i 2438) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z 2438) Z) 2438)",
        "(= (Read-Int-Int (Write-Int-Int b i 2437) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z 8855) Z) 8855)",
        "(= (Read-Int-Int (Write-Int-Int b i 641) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b i 640) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z 2437) Z) 2437)",
    ],
}
